<resources>
    <string name="app_name">PandoraBox</string>
    <string name="title_activity_home">HomeActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="tip_double_click_exit">再按一次退出</string>
    <string name="get_in_now">立即进入</string>
    <string name="title_activity_main_center">MainCenterActivity</string>
    <string name="password_list">密码列表</string>
    <string name="delete">删除</string>
    <string name="setting">设置</string>
    <string name="scan_code_setting">二维码设置</string>
    <string name="password_export">密码导出</string>
    <string name="password_rule_setting">密码规则设置</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="rule_description">规则描述</string>
    <string name="rule_name">规则名</string>
    <string name="input_password_tip">请输入您的密码</string>
    <string name="confirm">确定</string>
    <string name="transition_toolbar">fake_toolbar_name</string>
    <string name="back">back</string>
    <string name="limit_input_number">0123456789</string>
    <string name="limit_input_word">0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLIMNOPQRSTUVWXYZ.@#$%^*()_-=+</string>
    <string name="description_tip_hint">请输入该密码的描述，如：该密码属于哪个应用</string>
    <string name="description">描述</string>
    <string name="password_preview">密码预览</string>
    <string name="time">时间</string>
    <string name="account_name">用户名</string>
    <string name="password">密码</string>
    <string name="register">注册</string>
    <string name="login">登录</string>
    <string name="confirm_password">请确认密码</string>
    <string name="auth_code">验证码</string>
    <string name="send_auth_code">发送验证码</string>
    <string name="phone">手机号</string>
    <string name="generate_code">二维码生成</string>
    <string name="validate_config">验证设置</string>
    <string name="reset">重置</string>
    <string name="synchronization">同步</string>
</resources>
