<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/password_list"
            android:icon="@drawable/ic_list_black_24dp"
            android:title="@string/password_list"/>
        <item
            android:id="@+id/password_rule_setting"
            android:icon="@drawable/ic_lock_outline_black_24dp"
            android:title="@string/validate_config"/>
        <item
            android:id="@+id/generate_code"
            android:icon="@drawable/ic_remove_red_eye_black_24dp"
            android:title="@string/generate_code"/>

    </group>

    <item android:title="@string/setting">
        <menu>
            <item
                android:id="@+id/nav_synchronization"
                android:icon="@drawable/ic_autorenew_black_24dp"
                android:title="@string/synchronization"/>
            <!--<item-->
                <!--android:id="@+id/nav_scan_code"-->
                <!--android:icon="@drawable/ic_menu_share"-->
                <!--android:title="@string/scan_code_setting"/>-->
            <item
                android:id="@+id/password_export"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/password_export"/>
        </menu>
    </item>

</menu>
