<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context="me.onionpie.pandorabox.UI.Activity.ResetValidateActivity">
    <FrameLayout
        android:id="@+id/top_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"></FrameLayout>

    <com.rengwuxian.materialedittext.MaterialEditText

        android:layout_marginTop="20dp"
        android:id="@+id/account_name"
        style="@style/EditTextStyle"
        android:hint="@string/phone"
        android:inputType="phone"
        app:met_floatingLabel="highlight"
        app:met_validateOnFocusLost="true"
        android:textColorHint="@color/text_color5"/>
    <RelativeLayout
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.rengwuxian.materialedittext.MaterialEditText

            android:id="@+id/auth_code"
            style="@style/EditTextStyle"
            android:layout_weight="1"
            android:digits="@string/limit_input_word"
            android:hint="@string/auth_code"
            android:textColorHint="@color/text_color5"/>
        <Button
            android:id="@+id/send_auth_code"
            android:layout_marginTop="3dp"
            android:layout_centerVertical="true"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_alignParentRight="true"
            android:background="@drawable/clickable_bg"
            android:text="@string/send_auth_code"
            android:textColor="@color/delete_color"
            android:textSize="14dp" />
    </RelativeLayout>

    <Button
        android:id="@+id/reset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_gravity="bottom|center_horizontal"
        android:background="@drawable/button_round_drawable"
        android:textColor="@color/white"
        android:text="@string/confirm"/>
</LinearLayout>
