<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    android:layout_marginTop="5dp"
    android:layout_marginLeft="5dp"
    android:layout_marginRight="5dp"
    android:layout_marginBottom="5dp"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <me.onionpie.pandorabox.Widget.SwipeItemView
        android:id="@+id/swipe_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/clickable_bg"
        android:orientation="horizontal">
        <RelativeLayout
            android:padding="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <!--<TextView-->
                <!--android:id="@+id/id"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:text=""-->
                <!--android:layout_margin="@dimen/text_margin"-->
                <!--android:textAppearance="?attr/textAppearanceListItem"/>-->

            <TextView
                android:id="@+id/preview"
                android:text="@string/password_preview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/text_margin"
                android:textAppearance="?attr/textAppearanceListItem"/>
            <TextView
                android:id="@+id/time"
                android:layout_alignParentRight="true"
                android:text="@string/time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/rule_name"
                android:layout_margin="5dp"
                android:layout_below="@id/preview"
                android:text="@string/rule_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/rule_description"
                android:layout_below="@id/rule_name"
                android:layout_margin="5dp"
                android:text="@string/description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </RelativeLayout>
        <!--<LinearLayout-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:orientation="horizontal">-->
           <!---->
        <!--</LinearLayout>-->

        <Button
            android:id="@+id/delete_btn"
            android:layout_width="100dp"
            android:textColor="@color/white"
            android:layout_height="match_parent"
            android:background="@color/delete_color"
            android:text="@string/delete"/>

    </me.onionpie.pandorabox.Widget.SwipeItemView>
</android.support.v7.widget.CardView>

